update role. Use molecule3

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: modify /etc/hosts file
-  template: >
-    src=hosts.j2
-    dest=/etc/hosts
+  template:
+    src: hosts.j2
+    dest: /etc/hosts
+  when: run_not_in_container|bool
