--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,20 +3,15 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
+  flake8 
 platforms:
-  - name: debian
-    image: "1am3r/molecule-${MOLECULE_DISTRO:-debian9}:latest"
+  - name: instance
+    image: "1am3r/debian:${MOLECULE_DISTRO:-buster}"
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
     privileged: true
     pre_build_image: true
-provisioner:
-  name: ansible
-  lint:
-    name: ansible-lint
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
