--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ env:
     - MOLECULE_DISTRO: stretch
 
 install:
-  - pip install yamllint ansible-lint flake8 molecule docker
-  
+  - pip install yamllint ansible-lint flake8 'molecule[docker]' docker
+
 before_script:
   - cd ../
   - mv ansible-role-$ROLE_NAME 1mr.$ROLE_NAME
